@@ -1011,3 +1011,4 @@
 	 framebuffer device to use (Darren).
 20040719 ui/fb/fbdisplay.c: hide/restore cursor on startup/exit (Darren).
 20040719 ui/fb/fbdisplay.c: remove unused variables (Darren).
+20040719 ui/xlib/xui.c: catch window close events (Darren).
